[package]
authors = ["Yaraslau Byshyk <dev@shyk.by>"]
name = "leven-clustering"
version = "0.0.1"
description = "Simple hierarchical clustering using levenshtein ratio"
edition = "2018"
keywords = ["clustering", "levenshtein", "rust"]

[dependencies]
kodama = "0.2.3"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
rayon = "1.5.0"

[lib]
name = "leven_clustering"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Operating System :: MacOS :: MacOS X",
]
