[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "leven_clustering/*.py"
]
manylinux = "2014"
strip = true

[tool.poetry]
name = "leven-clustering"
version = "0.0.1"
authors = ["Yaraslau Byshyk <dev@shyk.by>"]
description = "Simple agglomerative clustering using levenshtein ratio"
readme = "README.md"
repository = "https://github.com/byshyk/leven-clustering"
homepage = "https://github.com/byshyk/leven-clustering"
license = "MIT"
keywords = [
    "clustering",
    "levenshtein",
    "rust"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
